cv gap fix

--- a/css/cv.css
+++ b/css/cv.css
@@ -46,6 +46,11 @@
   grid-area: skills;
 }
 
+.skills {
+  display: grid;
+  gap: 24px;
+}
+
 .skills__list {
   display: grid;
 }
@@ -56,7 +61,7 @@
   "frontend-title frontend-desc"
   "backend-title backend-desc";
   grid-template-columns: 80px auto;
-  gap: 32px;
+  gap: 24px;
   align-items: start;
   line-height: 24px;
 }
